<?xml version="1.0"?>
<package format="2">
  <name>tactile_sensor_msgs</name>
  <version>0.0.0</version>
  <description>The tactile_sensor_msgs package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
</package>
