<?xml version="1.0"?>
<package format="2">
  <name>tactile_sensor_ros_bridge</name>
  <version>0.0.0</version>
  <description>The tactile_sensor_ros_bridge package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <author email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>rtmbuild2</depend>

</package>
