<?xml version="1.0"?>
<package format="2">
  <name>tactile_sensor_rviz_plugin</name>
  <version>0.0.0</version>
  <description>The tactile_sensor_rviz_plugin package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>pluginlib</depend>
  <depend>tactile_sensor_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
